bug 98558 add fields for chat configuration
Merging

//depot/zimbra/users/achhatre/JUDASPRIEST/...

to //depot/zimbra/JUDASPRIEST/...

https://bugzilla.zimbra.com/show_bug.cgi?id=98558

Copied from Perforce
 Change: 553224

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1340,12 +1340,12 @@ NAD_zimbraGeneralFeature = Generelle funktioner
 NAD_zimbraMailFeature = Mail-funktioner
 NAD_zimbraContactFeature = Kontaktfunktioner
 NAD_zimbraCalendarFeature = Kalenderfunktioner
-NAD_zimbraIMFeature = IM-funktioner
+NAD_zimbraChatFeature = IM-funktioner
 NAD_zimbraSearchFeature = S\u00f8gefunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokumenter
 LBL_zimbraFeatureBriefcasesEnabled = Dokumentmappe
 LBL_zimbraFeatureHtmlComposeEnabled = HTML-skrivning
-LBL_zimbraFeatureIMEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Instant Messenger
 LBL_zimbraFeatureInstantNotify = \u00d8jeblikkelige adviseringer
 LBL_zimbraPrefIMAutoLogin = Automatisk login p\u00e5 IM-tjenester
 NAD_Feature = Funktion: 
