--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1354,12 +1354,12 @@ NAD_zimbraGeneralFeature = Allgemeine Funktionen
 NAD_zimbraMailFeature = Mailfunktionen
 NAD_zimbraContactFeature = Kontaktfunktionen
 NAD_zimbraCalendarFeature = Kalenderfunktionen
-NAD_zimbraIMFeature = IM-Funktionen
+NAD_zimbraChatFeature = IM-Funktionen
 NAD_zimbraSearchFeature = Suchfunktionen
 LBL_zimbraFeatureNotebookEnabled = Notizen
 LBL_zimbraFeatureBriefcasesEnabled = Dateien
 LBL_zimbraFeatureHtmlComposeEnabled = In HTML verfassen
-LBL_zimbraFeatureIMEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Instant Messenger
 LBL_zimbraFeatureInstantNotify = Unmittelbare Benachrichtigungen
 LBL_zimbraPrefIMAutoLogin = Automatisch bei Instant Messenger anmelden
 NAD_Feature = Funktion: 
