--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1367,12 +1367,12 @@ NAD_zimbraGeneralFeature = Funtzio orokorrak
 NAD_zimbraMailFeature = Posta-funtzioak
 NAD_zimbraContactFeature = Kontaktu-informazioa
 NAD_zimbraCalendarFeature = Agendaren funtzioak
-NAD_zimbraIMFeature = Berehalako mezularitzako funtzioak
+NAD_zimbraChatFeature = Berehalako mezularitzako funtzioak
 NAD_zimbraSearchFeature = Bilaketa-funtzioak
 LBL_zimbraFeatureNotebookEnabled = Dokumentuak
 LBL_zimbraFeatureBriefcasesEnabled = Maleta
 LBL_zimbraFeatureHtmlComposeEnabled = Mezua prestatzea HTMLn
-LBL_zimbraFeatureIMEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Messenger
 LBL_zimbraFeatureInstantNotify = Alertak
 LBL_zimbraPrefIMAutoLogin = Hasi saioa automatikoki Messenger-en
 NAD_Feature = Funtzioa: 
