--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1360,12 +1360,12 @@ NAD_zimbraGeneralFeature = Fonctions g\u00e9n\u00e9rales
 NAD_zimbraMailFeature = Fonctions de messagerie
 NAD_zimbraContactFeature = Fonctions relatives aux contacts
 NAD_zimbraCalendarFeature = Fonctions de calendrier
-NAD_zimbraIMFeature = Fonctions IM
+NAD_zimbraChatFeature = Fonctions IM
 NAD_zimbraSearchFeature = Fonctions de recherche
 LBL_zimbraFeatureNotebookEnabled = Documents
 LBL_zimbraFeatureBriefcasesEnabled = Porte-documents
 LBL_zimbraFeatureHtmlComposeEnabled = \u00c9criture en HTML\u00a0:
-LBL_zimbraFeatureIMEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Messenger
 LBL_zimbraFeatureInstantNotify = Notifications instantan\u00e9es
 LBL_zimbraPrefIMAutoLogin = Connexion automatique aux services IM
 NAD_Feature = Fonction\u00a0: 
