--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1372,12 +1372,12 @@ NAD_zimbraGeneralFeature = Ciri Umum
 NAD_zimbraMailFeature = Ciri Mel
 NAD_zimbraContactFeature = Ciri-ciri Kenalan
 NAD_zimbraCalendarFeature = Ciri Kalendar
-NAD_zimbraIMFeature = Ciri IM
+NAD_zimbraChatFeature = Ciri IM
 NAD_zimbraSearchFeature = Ciri Gelintaran
 LBL_zimbraFeatureNotebookEnabled = Dokumen
 LBL_zimbraFeatureBriefcasesEnabled = Beg Bimbit
 LBL_zimbraFeatureHtmlComposeEnabled = Karang HTML
-LBL_zimbraFeatureIMEnabled = Pemesejan Segera
+LBL_zimbraFeatureChatEnabled = Pemesejan Segera
 LBL_zimbraFeatureInstantNotify = Pemberitahuan Segera
 LBL_zimbraPrefIMAutoLogin = Log masuk secara automatik ke perkhidmatan pemesejan segera
 NAD_Feature = Ciri: 
