--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1364,12 +1364,12 @@ NAD_zimbraGeneralFeature = Funkcje og\u00f3lne
 NAD_zimbraMailFeature = Funkcje poczty
 NAD_zimbraContactFeature = Funkcje kontakt\u00f3w
 NAD_zimbraCalendarFeature = Funkcje kalendarza
-NAD_zimbraIMFeature = Funkcje komunikatora
+NAD_zimbraChatFeature = Funkcje komunikatora
 NAD_zimbraSearchFeature = Funkcje wyszukiwania
 LBL_zimbraFeatureNotebookEnabled = Dokumenty
 LBL_zimbraFeatureBriefcasesEnabled = Akt\u00f3wka
 LBL_zimbraFeatureHtmlComposeEnabled = Tw\u00f3rz HTML
-LBL_zimbraFeatureIMEnabled = Komunikator do obs\u0142ugi wiadomo\u015bci b\u0142yskawicznych
+LBL_zimbraFeatureChatEnabled = Komunikator do obs\u0142ugi wiadomo\u015bci b\u0142yskawicznych
 LBL_zimbraFeatureInstantNotify = Powiadomienia w wiadomo\u015bciach b\u0142yskawicznych
 LBL_zimbraPrefIMAutoLogin = Automatycznie zaloguj w us\u0142ugach komunikatora internetowego
 NAD_Feature = Funkcja: 
