--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1339,12 +1339,12 @@ NAD_zimbraGeneralFeature = Recursos gerais
 NAD_zimbraMailFeature = Recursos de e-mail
 NAD_zimbraContactFeature = Recursos de contato
 NAD_zimbraCalendarFeature = Recursos de agenda
-NAD_zimbraIMFeature = Recursos de MI
+NAD_zimbraChatFeature = Recursos de MI
 NAD_zimbraSearchFeature = Recursos de busca
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-arquivos
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureIMEnabled = Sistema de troca de mensagens instant\u00e2neas
+LBL_zimbraFeatureChatEnabled = Sistema de troca de mensagens instant\u00e2neas
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
 LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso: 
