--- a/WebRoot/messages/ZaMsg_pt_PT.properties
+++ b/WebRoot/messages/ZaMsg_pt_PT.properties
@@ -1260,12 +1260,12 @@ NAD_zimbraMajorFeature = Recursos principais
 NAD_zimbraGeneralFeature = Recursos gerais
 NAD_zimbraMailFeature = Recursos de e-mail
 NAD_zimbraCalendarFeature = Recursos de agenda
-NAD_zimbraIMFeature = Recursos de MI
+NAD_zimbraChatFeature = Recursos de MI
 NAD_zimbraSearchFeature = Recursos de pesquisa
 LBL_zimbraFeatureNotebookEnabled = Documentos
 LBL_zimbraFeatureBriefcasesEnabled = Porta-ficheiros
 LBL_zimbraFeatureHtmlComposeEnabled = Escrever em formato HTML
-LBL_zimbraFeatureIMEnabled = Instant Messenger
+LBL_zimbraFeatureChatEnabled = Instant Messenger
 LBL_zimbraFeatureInstantNotify = Notifica\u00e7\u00f5es instant\u00e2neas
 LBL_zimbraPrefIMAutoLogin = Efetuar o login automaticamente nos servi\u00e7os de mensagem instant\u00e2nea
 NAD_Feature = Recurso:
