--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1371,12 +1371,12 @@ NAD_zimbraGeneralFeature = Splo\u0161ne funkcije
 NAD_zimbraMailFeature = Funkcije po\u0161te
 NAD_zimbraContactFeature = Funkcije za stik
 NAD_zimbraCalendarFeature = Funkcije koledarja
-NAD_zimbraIMFeature = IM funkcije
+NAD_zimbraChatFeature = IM funkcije
 NAD_zimbraSearchFeature = Funkcije iskanja
 LBL_zimbraFeatureNotebookEnabled = Dokumenti
 LBL_zimbraFeatureBriefcasesEnabled = Aktovka
 LBL_zimbraFeatureHtmlComposeEnabled = HTML sestavi
-LBL_zimbraFeatureIMEnabled = Program za neposredno sporo\u010danje
+LBL_zimbraFeatureChatEnabled = Program za neposredno sporo\u010danje
 LBL_zimbraFeatureInstantNotify = Neposredna obvestila
 LBL_zimbraPrefIMAutoLogin = Samodejno se prijavi v storitve za neposredno sporo\u010danje
 NAD_Feature = Funkcija: 
