--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1340,12 +1340,12 @@ NAD_zimbraGeneralFeature = Allm\u00e4nna funktioner
 NAD_zimbraMailFeature = E-postfunktioner
 NAD_zimbraContactFeature = Kontaktfunktioner
 NAD_zimbraCalendarFeature = Kalenderfunktioner
-NAD_zimbraIMFeature = Snabbmeddelandefunktioner
+NAD_zimbraChatFeature = Snabbmeddelandefunktioner
 NAD_zimbraSearchFeature = S\u00f6kfunktioner
 LBL_zimbraFeatureNotebookEnabled = Dokument
 LBL_zimbraFeatureBriefcasesEnabled = Portf\u00f6lj
 LBL_zimbraFeatureHtmlComposeEnabled = Skriv HTML
-LBL_zimbraFeatureIMEnabled = Snabbmeddelanden
+LBL_zimbraFeatureChatEnabled = Snabbmeddelanden
 LBL_zimbraFeatureInstantNotify = Snabbmeddelanden
 LBL_zimbraPrefIMAutoLogin = Logga in p\u00e5 snabbmeddelandetj\u00e4nster automatiskt
 NAD_Feature = Funktion: 
