--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1364,12 +1364,12 @@ NAD_zimbraGeneralFeature = \u4e00\u822c\u529f\u80fd
 NAD_zimbraMailFeature = \u90ae\u7bb1\u529f\u80fd
 NAD_zimbraContactFeature = \u4f9b\u8054\u7cfb\u4eba\u4f7f\u7528\u7684\u529f\u80fd
 NAD_zimbraCalendarFeature = \u65e5\u5386\u529f\u80fd
-NAD_zimbraIMFeature = IM \u529f\u80fd
+NAD_zimbraChatFeature = IM \u529f\u80fd
 NAD_zimbraSearchFeature = \u641c\u7d22\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u6863
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u6587\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5199\u4fe1
-LBL_zimbraFeatureIMEnabled = \u5373\u65f6\u901a
+LBL_zimbraFeatureChatEnabled = \u5373\u65f6\u901a
 LBL_zimbraFeatureInstantNotify = \u5373\u65f6\u901a\u77e5
 LBL_zimbraPrefIMAutoLogin = \u81ea\u52a8\u767b\u5f55\u5230\u5373\u65f6\u901a\u4fe1\u670d\u52a1
 NAD_Feature = \u529f\u80fd\uff1a 
