--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1340,12 +1340,12 @@ NAD_zimbraGeneralFeature = \u4e00\u822c\u529f\u80fd
 NAD_zimbraMailFeature = \u90f5\u7bb1\u529f\u80fd
 NAD_zimbraContactFeature = \u901a\u8a0a\u9304\u529f\u80fd
 NAD_zimbraCalendarFeature = \u8a18\u4e8b\u7c3f\u529f\u80fd
-NAD_zimbraIMFeature = IM \u529f\u80fd
+NAD_zimbraChatFeature = IM \u529f\u80fd
 NAD_zimbraSearchFeature = \u641c\u5c0b\u529f\u80fd
 LBL_zimbraFeatureNotebookEnabled = \u6587\u4ef6
 LBL_zimbraFeatureBriefcasesEnabled = \u516c\u4e8b\u5305
 LBL_zimbraFeatureHtmlComposeEnabled = \u7528 HTML \u5beb\u4fe1
-LBL_zimbraFeatureIMEnabled = \u5373\u6642\u901a
+LBL_zimbraFeatureChatEnabled = \u5373\u6642\u901a
 LBL_zimbraFeatureInstantNotify = \u5373\u6642\u901a\u77e5
 LBL_zimbraPrefIMAutoLogin = \u81ea\u52d5\u767b\u5165\u5230\u5373\u6642\u901a\u4fe1\u670d\u52d9
 NAD_Feature = \u529f\u80fd\uff1a 
