--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1357,12 +1357,12 @@ NAD_zimbraGeneralFeature = Funciones generales
 NAD_zimbraMailFeature = Funciones de correo
 NAD_zimbraContactFeature = Funciones del contacto
 NAD_zimbraCalendarFeature = Funciones de la agenda
-NAD_zimbraIMFeature = Funciones de mensajer\u00eda instant\u00e1nea
+NAD_zimbraChatFeature = Funciones de mensajer\u00eda instant\u00e1nea
 NAD_zimbraSearchFeature = Funciones de b\u00fasqueda
 LBL_zimbraFeatureNotebookEnabled = Bloc de notas
 LBL_zimbraFeatureBriefcasesEnabled = Malet\u00edn
 LBL_zimbraFeatureHtmlComposeEnabled = Redactar en HTML
-LBL_zimbraFeatureIMEnabled = Messenger
+LBL_zimbraFeatureChatEnabled = Messenger
 LBL_zimbraFeatureInstantNotify = Alertas
 LBL_zimbraPrefIMAutoLogin = Iniciar sesi\u00f3n autom\u00e1ticamente en Messenger
 NAD_Feature = Funci\u00f3n: 
