--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1371,12 +1371,12 @@ NAD_zimbraGeneralFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e9
 NAD_zimbraMailFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e94\u200b\u0eaa\u0eb0\u200b\u0e99\u0eb0\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec0\u0ea1\u200b\u0ea7
 NAD_zimbraContactFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0e95\u0eb4\u0e94\u0e95\u0ecd\u0ec8
 NAD_zimbraCalendarFeature = \u0e84\u0eb8\u0e99\u200b\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0\u200b\u0e82\u0ead\u0e87\u0e9b\u0eb0\u0e95\u0eb4\u0e97\u0eb4\u0e99
-NAD_zimbraIMFeature = \u0e84\u0eb8\u0e99\u200b\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0 IM 
+NAD_zimbraChatFeature = \u0e84\u0eb8\u0e99\u200b\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0 IM 
 NAD_zimbraSearchFeature = \u0e84\u0ebb\u0ec9\u0e99\u200b\u0eab\u0eb2\u200b\u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0
 LBL_zimbraFeatureNotebookEnabled = \u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureBriefcasesEnabled = \u0e81\u0eb0\u0ec0\u0e9b\u0ebb\u0eb2\u0ec3\u0eaa\u0ec8\u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraFeatureHtmlComposeEnabled = \u0eae\u0ec8\u0eb2\u0e87 HTML 
-LBL_zimbraFeatureIMEnabled = \u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a
+LBL_zimbraFeatureChatEnabled = \u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a
 LBL_zimbraFeatureInstantNotify = \u200b\u0ec1\u0e88\u0ec9\u0e87\u0ec0\u0e95\u0eb7\u0ead\u0e99\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a
 LBL_zimbraPrefIMAutoLogin = \u200b\u0ec0\u0e82\u0ebb\u0ec9\u0eb2\u200b\u0eaa\u0eb9\u0ec8\u200b\u0e81\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ea5\u0eb4\u0e81\u0eb2\u0e99\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0eae\u0eb9\u0e9a\u200b\u0ec2\u0e94\u0e8d\u200b\u0ead\u0eb1\u0e94\u0e95\u0eb0\u200b\u0ec2\u0e99\u200b\u0ea1\u0eb1\u0e94 
 NAD_Feature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0: 
