--- a/WebRoot/messages/ZaMsg_ru.properties
+++ b/WebRoot/messages/ZaMsg_ru.properties
@@ -1339,12 +1339,12 @@ NAD_zimbraGeneralFeature = \u041e\u0431\u0449\u0438\u0435 \u0444\u0443\u043d\u04
 NAD_zimbraMailFeature = \u041f\u043e\u0447\u0442\u043e\u0432\u044b\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438
 NAD_zimbraContactFeature = \u0421\u0432\u043e\u0439\u0441\u0442\u0432\u0430 \u043a\u043e\u043d\u0442\u0430\u043a\u0442\u043e\u0432
 NAD_zimbraCalendarFeature = \u0424\u0443\u043d\u043a\u0446\u0438\u0438 \u0435\u0436\u0435\u0434\u043d\u0435\u0432\u043d\u0438\u043a\u0430
-NAD_zimbraIMFeature = \u0424\u0443\u043d\u043a\u0446\u0438\u0438 \u041c\u0421
+NAD_zimbraChatFeature = \u0424\u0443\u043d\u043a\u0446\u0438\u0438 \u041c\u0421
 NAD_zimbraSearchFeature = \u0424\u0443\u043d\u043a\u0446\u0438\u0438 \u043f\u043e\u0438\u0441\u043a\u0430
 LBL_zimbraFeatureNotebookEnabled = \u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b
 LBL_zimbraFeatureBriefcasesEnabled = \u041f\u043e\u0440\u0442\u0444\u0435\u043b\u044c
 LBL_zimbraFeatureHtmlComposeEnabled = \u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435 HTML
-LBL_zimbraFeatureIMEnabled = \u041c\u0435\u0441\u0441\u0435\u043d\u0434\u0436\u0435\u0440
+LBL_zimbraFeatureChatEnabled = \u041c\u0435\u0441\u0441\u0435\u043d\u0434\u0436\u0435\u0440
 LBL_zimbraFeatureInstantNotify = \u041c\u0433\u043d\u043e\u0432\u0435\u043d\u043d\u044b\u0435 \u0443\u0432\u0435\u0434\u043e\u043c\u043b\u0435\u043d\u0438\u044f
 LBL_zimbraPrefIMAutoLogin = \u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438\u0439 \u0432\u0445\u043e\u0434 \u0432 \u0441\u043b\u0443\u0436\u0431\u044b \u043c\u0433\u043d\u043e\u0432\u0435\u043d\u043d\u044b\u0445 \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0439
 NAD_Feature = \u0424\u0443\u043d\u043a\u0446\u0438\u044f: 
