--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1370,12 +1370,12 @@ NAD_zimbraGeneralFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e3
 NAD_zimbraMailFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22
 NAD_zimbraContactFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e1c\u0e39\u0e49\u0e15\u0e34\u0e14\u0e15\u0e48\u0e2d
 NAD_zimbraCalendarFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e1b\u0e0f\u0e34\u0e17\u0e34\u0e19
-NAD_zimbraIMFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30 IM
+NAD_zimbraChatFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30 IM
 NAD_zimbraSearchFeature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30\u0e01\u0e32\u0e23\u0e04\u0e49\u0e19\u0e2b\u0e32
 LBL_zimbraFeatureNotebookEnabled = \u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23
 LBL_zimbraFeatureBriefcasesEnabled = \u0e01\u0e23\u0e30\u0e40\u0e1b\u0e4b\u0e32\u0e40\u0e2d\u0e01\u0e2a\u0e32\u0e23
 LBL_zimbraFeatureHtmlComposeEnabled = \u0e40\u0e02\u0e35\u0e22\u0e19 HTML
-LBL_zimbraFeatureIMEnabled = \u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35
+LBL_zimbraFeatureChatEnabled = \u0e01\u0e32\u0e23\u0e2a\u0e48\u0e07\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35
 LBL_zimbraFeatureInstantNotify = \u0e01\u0e32\u0e23\u0e41\u0e08\u0e49\u0e07\u0e43\u0e2b\u0e49\u0e17\u0e23\u0e32\u0e1a\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35
 LBL_zimbraPrefIMAutoLogin = \u0e40\u0e02\u0e49\u0e32\u0e2a\u0e39\u0e48\u0e23\u0e30\u0e1a\u0e1a\u0e02\u0e2d\u0e07\u0e1a\u0e23\u0e34\u0e01\u0e32\u0e23\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e42\u0e15\u0e49\u0e15\u0e2d\u0e1a\u0e41\u0e1a\u0e1a\u0e17\u0e31\u0e19\u0e17\u0e35\u0e42\u0e14\u0e22\u0e2d\u0e31\u0e15\u0e42\u0e19\u0e21\u0e31\u0e15\u0e34
 NAD_Feature = \u0e04\u0e38\u0e13\u0e25\u0e31\u0e01\u0e29\u0e13\u0e30: 
