--- a/WebRoot/messages/ZabMsg_ja.properties
+++ b/WebRoot/messages/ZabMsg_ja.properties
@@ -15,7 +15,7 @@
 # ***** END LICENSE BLOCK *****
 # 
 favIconUrl=/img/logo/favicon.ico
-LBL_zimbraPrefAdminConsoleWarnOnExit =\u7ba1\u7406\u8005\u304cZimbra Administration Console\u304b\u3089\u30ca\u30d3\u30b2\u30fc\u30c8\u3057\u3088\u3046\u3068\u3059\u308b\u3068\u304d\u306b\u8b66\u544a\u3092\u8868\u793a
+LBL_zimbraPrefAdminConsoleWarnOnExit = \u7ba1\u7406\u8005\u304c\u7ba1\u7406\u30b3\u30f3\u30bd\u30fc\u30eb\u753b\u9762\u304b\u3089\u4ed6\u306e\u30da\u30fc\u30b8\u30d8\u79fb\u52d5\u3057\u3088\u3046\u3068\u3059\u308b\u3068\u304d\u306b\u8b66\u544a\u3092\u8868\u793a
 ERROR_ZCS_NOT_RUNNING = Zimbra\u30b5\u30fc\u30d0\u30fc\u306b\u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093\u3002Zimbra\u304c\u5b9f\u884c\u3055\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u78ba\u8a8d\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 zimbraAdminTitle = Zimbra Administration
 HELP_PAGE_0 = Zimbra Administrator\u30d8\u30eb\u30d7\u30bb\u30f3\u30bf\u30fc
